# stt_app

./: .gitattributes  .gitignore  AGENTS.md  CLAUDE.md  README.md  main.py  package-lock.json  package.json  pyproject.toml  requirements-dev-win.txt  requirements-win.txt  stt-dictation-spec.md  stt_app.spec  tts_app.spec
.github/workflows/: quality.yml  windows-release.yml
docs/: advanced-setup.md  azure-llm-speech.md  cohere-transcribe-evaluation.md  enterprise-deployment-guide.md  funasr-and-fleurs-evaluation.md  granite-speech-4.1-nar-q4.md  granite-speech-4.1-onnx-variants.md  ibm-granite-speech-evaluation.md  learning-log.md  local-asr-model-candidates-2026.md  local-models-and-benchmark.md  local-onnx-q4-conversion.md  local-onnx-runtime.md  model-error-rate-reference.md  models.md  offline-usage-guide.md  parakeet-evaluation.md  provider-costs.md  quick-start.md  qwen3-asr-evaluation.md  streaming-mode.md  windows-distribution.md
docs/benchmarks/: README.md  amd-ryzen-7600x-intel-arc-a750-2026-04-22.md  amd-ryzen-7600x-intel-arc-a750-2026-07-11.md
installer/windows/: stt_app.iss
scripts/: benchmark_local.py  build_windows_installer.ps1  build_windows_release.ps1  convert_granite_nar_q4.py  create_release.py  download_model.py  generate_app_icon.py  generate_sample_audio.py  import_model.py  release_version.py  setup_node_windows.py  smoke_test.py  sync_to_windows.ps1  sync_to_windows.sh
src/stt_app/: __init__.py  app_icon.py  app_paths.py  audio_capture.py  audio_device_listener.py  audio_devices.py  benchmark_environment.py  benchmark_history.py  benchmark_process.py  benchmark_worker.py  config.py  controller.py  csv_safety.py  history_dialog.py  history_ui_actions.py  hotkey.py  last_recording_store.py  local_benchmark.py  local_model_download.py  local_model_download_worker.py  local_model_inventory_store.py  local_model_scan.py  local_model_scan_worker.py  logger.py  main.py  model_download_progress.py  overlay_ui.py  persistence.py  provider_connection_test_store.py  secret_store.py  settings_dialog.py  settings_dialog_audio.py  settings_dialog_benchmark.py  settings_dialog_general.py  settings_dialog_helpers.py  settings_dialog_history.py  settings_dialog_import.py  settings_dialog_local.py  settings_dialog_persistence.py  (+14 more)
tests/: conftest.py  test_app_paths.py  test_assemblyai_provider.py  test_audio_capture.py  test_audio_device_listener.py  test_audio_devices.py  test_azure_provider.py  test_base_transcriber.py  test_benchmark_environment.py  test_benchmark_history.py  test_benchmark_process.py  test_benchmark_script.py  test_benchmark_transcript_ui.py  test_controller.py  test_controller_audio_devices.py  test_controller_coverage.py  test_controller_queue.py  test_create_release.py  test_csv_safety.py  test_deepgram_provider.py  test_dependency_metadata.py  test_elevenlabs_provider.py  test_factory.py  test_funasr_provider.py  test_groq_provider.py  test_history_dialog.py  test_hotkey_manager.py  test_http_utils.py  test_import_model.py  test_last_recording_store.py  test_local_model_download.py  test_local_model_download_worker.py  test_local_model_inventory_store.py  test_local_model_scan.py  test_local_model_scan_worker.py  test_local_nemotron.py  test_local_webgpu_asr.py  test_logger.py  test_main_signals.py  test_model_download_progress.py  (+25 more)
(+41 files in other folders)
