[project]
name = "tts-app"
version = "0.1.0"
description = "Windows 11 dictation app MVP (Phase 1)"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "PySide6==6.8.2.1",
    "sounddevice==0.5.5",
    "numpy==2.4.2",
    "faster-whisper==1.2.1",
    "requests==2.32.5",
    "keyring==25.7.0",
    "pywin32==308; platform_system == 'Windows'",
    "assemblyai>=0.37.0",
    "websocket-client>=1.8.0",
]

[project.scripts]
tts-app = "tts_app.main:run"

[project.optional-dependencies]
dev = [
    "pytest==8.3.4",
    "pytest-mock==3.14.0",
    "ruff>=0.15.1",
]

[build-system]
requires = ["hatchling==1.27.0"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/tts_app"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
addopts = "-q"

[dependency-groups]
dev = [
    "pytest==8.3.4",
    "pytest-cov>=7.0.0",
    "pytest-mock==3.14.0",
    "ruff>=0.15.1",
]
