[project]
name = "stt-app"
version = "0.1.0"
description = "Windows 11 dictation app MVP (Phase 1)"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "PySide6==6.11.0",
    "sounddevice==0.5.5",
    "numpy==2.4.3",
    "faster-whisper==1.2.1",
    "keyring==25.7.0",
    "pywin32==311; platform_system == 'Windows'",
    "assemblyai==0.59.0",
    "groq==1.1.2",
    "truststore==0.10.4",
    "websocket-client==1.9.0",
]

[project.scripts]
stt-app = "stt_app.main:run"

[project.optional-dependencies]
dev = [
    "pytest==9.0.2",
    "pytest-cov==7.1.0",
    "pytest-mock==3.15.1",
    "ruff==0.15.8",
]

[build-system]
requires = ["hatchling==1.29.0"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/stt_app"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
addopts = "-q"

[dependency-groups]
dev = [
    "pytest==9.0.2",
    "pytest-cov==7.1.0",
    "pytest-mock==3.15.1",
    "ruff==0.15.8",
]
