[project]
name = "stt-app"
version = "0.6.0"
description = "Local and cloud speech-to-text dictation for Windows 11"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "PySide6==6.11.0",
    "sounddevice==0.5.5",
    "numpy==2.4.3",
    "faster-whisper==1.2.1",
    "onnxruntime-genai==0.14.1; platform_system == 'Windows'",
    "keyring==25.7.0",
    "pywin32==311; platform_system == 'Windows'",
    "comtypes==1.4.16; platform_system == 'Windows'",
    "assemblyai==0.64.26",
    "groq==1.1.2",
    "truststore==0.10.4",
    "websocket-client==1.9.0",
]

[project.scripts]
stt-app = "stt_app.main:run"

[project.optional-dependencies]
dev = [
    "pyinstaller==6.19.0",
    "pytest==9.0.3",
    "pytest-cov==7.1.0",
    "pytest-mock==3.15.1",
    "ruff==0.15.8",
]

[build-system]
requires = ["hatchling==1.29.0"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/stt_app"]
include = [
    "src/stt_app/webgpu_asr_runner.mjs",
    "src/stt_app/assets/app_icon.ico",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
addopts = "-q"

[dependency-groups]
dev = [
    "pyinstaller==6.19.0",
    "pytest==9.0.3",
    "pytest-cov==7.1.0",
    "pytest-mock==3.15.1",
    "ruff==0.15.8",
]
